--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         const config = {
             type: Phaser.AUTO,
-            width: window.innerWidth,
-            height: window.innerHeight,
+            width: 1250,
+            height: 800,
             physics: {
                 default: 'arcade',
                 arcade: {
