--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="module">
         import { Player } from './player.js';
         import { Level } from './level.js';
+        import { Enemy } from './enemy.js';
 
         const config = {
             type: Phaser.AUTO,
@@ -28,10 +29,11 @@
         };
 
         const game = new Phaser.Game(config);
-        let player, level;
+        let player, level, enemy;
 
         function preload() {
             this.load.image('player', 'https://opengameart.org/sites/default/files/styles/medium/public/asset/cyborg.png');
+            this.load.image('enemy', 'https://opengameart.org/sites/default/files/styles/medium/public/asset/lol.png');
             this.load.image('ground', 'https://opengameart.org/sites/default/files/styles/medium/public/asset/platform.png');
             this.load.image('base', 'https://opengameart.org/sites/default/files/styles/medium/public/asset/base.png');
         }
@@ -39,14 +41,18 @@
         function create() {
             level = new Level(this);
             player = new Player(this);
+            enemy = new Enemy(this);
 
             // Colliders
             this.physics.add.collider(player.sprite, level.ground);
             this.physics.add.collider(player.sprite, level.platforms);
+            this.physics.add.collider(enemy.sprite, level.ground);
+            this.physics.add.collider(enemy.sprite, level.platforms);
         }
 
         function update() {
             player.update();
+            enemy.update();
         }
     </script>
 </head>
